Java 8 compatible fixes.